[package]
name = "easer"
version = "0.1.0"
edition = "2021"
authors = ["Emin <me@emin.chat>"]
description = """
A simple tool to release packages to gitee.
"""

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
semver = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
mockito = "1.4.0"
tempfile = "3.10"
